apps/home/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: home
  template:
    metadata:
      labels:
        app: home
    spec:
      imagePullSecrets:
        - name: pikol-pull-secret
      containers:
        - name: web
          image: ghcr.io/pikol-app/home:x.x.x
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 10m
              memory: 50Mi
            limits:
              memory: 100Mi
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 15
            timeoutSeconds: 5
