apps/home/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: home
spec:
  selector:
    app: home
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 3000
